# py-dotscript

./: README.md  pyproject.toml
.github/workflows/: python-test.yml
src/dotscript/: __init__.py  dot.py
tests/: base.py  hello_world.py  simple.py  test_hello_world.py
